first version of validation section added

--- a/refs.bib
+++ b/refs.bib
@@ -387,6 +387,7 @@ author = "Herbert B. Enderton"
   year = 2013
 }
 
+
 @online{owl,
   author = {{W3C OWL Working Group}},
   title = {{\sc owl} 2 {Web Ontology Language}},
@@ -395,6 +396,7 @@ author = "Herbert B. Enderton"
   month = dec,
   year = 2012,
 }
+
 @online{owlold,
   author = {
        Mike Dean and
@@ -2136,3 +2138,307 @@ year = 2015,
  publisher = {Morgan Kaufmann Publishers Inc.},
  address = {San Francisco, CA, USA},
 } 
+@book{logicpro,
+  title={From logic programming to Prolog},
+  author={Apt, Krzysztof R and others},
+  volume={362},
+  year={1997},
+  publisher={Prentice Hall London}
+}
+@book{nilsson,
+  title={Logic, programming and Prolog},
+  author={Nilsson, Ulf and Ma{\l}uszy{\'n}ski, Jan},
+  year={1990},
+  publisher={Wiley Chichester}
+}
+@inproceedings{rietveld2015lod,
+  title={{LOD} lab: Experiments at {LOD} scale},
+  author={Rietveld, Laurens and Beek, Wouter and Schlobach, Stefan},
+  booktitle={International Semantic Web Conference},
+  pages={339--355},
+  year={2015},
+  organization={Springer}
+}
+@article{zaveri2015quality,
+  author =    {Zaveri, Amrapali and Rula, Anisa and Maurino, Andrea and Pietrobon, Ricardo and Lehmann, Jens and Auer, S{\"o}ren},
+  title =     {Quality assessment for linked data: A survey},
+  journal =   {Semantic Web},
+  year =      {2015},
+  volume =    {7},
+  number =    {1},
+  pages =     {63--93},
+  month =     mar,
+  abstract =  {The development and standardization of Semantic Web technologies has resulted in an unprecedented volume of data being published on the Web as Linked Data (LD). However, we observe widely varying data quality ranging from extensively curated datasets to crowdsourced and extracted data of relatively low quality. In this article, we present the results of a systematic review of approaches for assessing the quality of LD. We gather existing approaches and analyze them qualitatively. In particular, we unify and formalize commonly used terminologies across papers related to data quality and provide a comprehensive list of 18 quality dimensions and 69 metrics. Additionally, we qualitatively analyze the 30 core approaches and 12 tools using a set of attributes. The aim of this article is to provide researchers and data curators a comprehensive understanding of existing work, thereby encouraging further experimentation and development of new approaches focused towards data quality, specifically for LD.},
+  doi =       {10.3233/SW-150175},
+  owner =     {bjdmeest},
+  publisher = {IOS Press},
+  timestamp = {2016.04.13},
+  url =       {http://www.semantic-web-journal.net/system/files/swj556.pdf}
+}
+@article{ketterl2011whoknows,
+  title={Whoknows? evaluating linked data heuristics with a quiz that cleans up dbpedia},
+  author={Ketterl, Markus and Knipping, Lars and Ludwig, Nadine and Mertens, Robert and Waitelonis, J{\"o}rg and Ludwig, Nadine and Knuth, Magnus and Sack, Harald},
+  journal={Interactive Technology and Smart Education},
+  volume={8},
+  number={4},
+  pages={236--248},
+  year={2011},
+  publisher={Emerald Group Publishing Limited}
+}
+@article{shex,
+  title={Shape expressions 1.0 definition. W3C Member Submission},
+  author={Solbrig, H and Prud'hommeaux, E},
+  journal={World Wide Web Consortium, June},
+  year={2014}
+}
+@article{resh,
+  title={Resource shape 2.0. W3C Member Submission},
+  author={Ryman, A},
+  journal={World Wide Web Consortium, Feb},
+  year={2014}
+}
+@phdthesis{hartmann2016,
+  title={Validation Framework for RDF-based Constraint Languages},
+  author={Hartmann, Thomas},
+  year={2016},
+  school={Dissertation, Karlsruhe, Karlsruher Institut f{\"u}r Technologie (KIT), 2016}
+}
+
+@inproceedings{kontokostas2014test,
+  title={Test-driven evaluation of linked data quality},
+  author={Kontokostas, Dimitris and Westphal, Patrick and Auer, S{\"o}ren and Hellmann, Sebastian and Lehmann, Jens and Cornelissen, Roland and Zaveri, Amrapali},
+  booktitle={Proceedings of the 23rd international conference on World Wide Web},
+  pages={747--758},
+  year={2014},
+  organization={ACM}
+}
+@article{dsp,
+  title={Description set profiles: A constraint language for dublin core application profiles},
+  author={Nilsson, Mikael},
+  journal={DCMI Working Draft},
+  year={2008}
+}
+@TechReport{shacl,
+  author =      {Knublauch, Holger and Kontokostas, Dimitris},
+  title =       {Shapes Constraint Language (SHACL)},
+  institution = {W3C},
+  year =        {2017},
+  note =        {Accessed March 3rd, 2017},
+  owner =       {bjdmeest},
+  timestamp =   {2017.03.03},
+  url =         {https://www.w3.org/TR/shacl/}
+}
+@phdthesis{owlValidation,
+  title={Integrity constraints for the semantic web: an owl 2 dl extension},
+  author={Tao, Jiao},
+  year={2012},
+  school={Rensselaer Polytechnic Institute}
+}
+@TechReport{Knublauch2011,
+  author =      {Knublauch, Holger and Hendler, James A. and Idehen, Kingsley},
+  title =       {{SPIN} -- Overview and Motivation},
+  institution = {W3C},
+  year =        {2011},
+  month =       feb,
+  note =        {Accessed April 18th, 2016},
+  abstract =    {his document provides an overview of the SPARQL Inferencing Notation (SPIN). SPIN is a SPARQL-based rule and constraint language for the Semantic Web. SPIN is also a mechanism to represent reusable SPARQL queries as templates and to define new SPARQL functions with a web-friendly syntax.},
+  owner =       {bjdmeest},
+  timestamp =   {2016.04.18},
+  url =         {https://www.w3.org/Submission/2011/SUBM-spin-overview-20110222/}
+}
+@inproceedings{motik2007adding,
+  title={Adding Integrity Constraints to OWL.},
+  author={Motik, Boris and Horrocks, Ian and Sattler, Ulrike},
+  booktitle={OWLED},
+  volume={258},
+  year={2007}
+}
+
+@inproceedings{sirin2009towards,
+ author = {Sirin, Evren and Tao, Jiao},
+ title = {Towards Integrity Constraints in OWL},
+ booktitle = {Proceedings of the 6th International Conference on OWL: Experiences and Directions - Volume 529},
+ series = {OWLED'09},
+ year = {2009},
+ location = {Chantilly, VA},
+ pages = {79--88},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=2890046.2890055},
+ acmid = {2890055},
+ publisher = {CEUR-WS.org},
+ address = {Aachen, Germany, Germany},
+} 
+@article{bosch2015rdf,
+  title={RDF validation requirements-evaluation and logical underpinning},
+  author={Bosch, Thomas and Nolle, Andreas and Acar, Erman and Eckert, Kai},
+  journal={arXiv preprint arXiv:1501.03933},
+  year={2015}
+}
+@inproceedings{jurion_rdfunit,
+  added-at = {2017-02-28T17:39:50.000+0100},
+  author = {Kontokostas, Dimitris and Mader, Christian and Dirschl, Christian and Eck, Katja and Leuthold, Michael and Lehmann, Jens and Hellmann, Sebastian},
+  biburl = {http://www.bibsonomy.org/bibtex/2e793beeb5e8be10cffc5bb3efc8d73e6/aksw},
+  booktitle = {13th International Conference, ESWC 2016, Heraklion, Crete, Greece, May 2016},
+  doi = {10.1007/978-3-319-34129-3_40},
+  interhash = {cc759d5ccc68d602d05dd26e00d8e0e3},
+  intrahash = {e793beeb5e8be10cffc5bb3efc8d73e6},
+  isbn = {978-3-319-34129-3},
+  keywords = {2016 Lidmole MOLE aligned-project group_aksw hellmann kilt_publications kontokostas mole rdfunit},
+  pages = {661--676},
+  timestamp = {2017-02-28T17:39:50.000+0100},
+  title = {Semantically Enhanced Quality Assurance in the JURION Business Use Case},
+  url = {http://svn.aksw.org/papers/2016/ESWC_Jurion/public.pdf},
+  year = 2016
+}
+@inproceedings{bosch2015,
+ author = {Bosch, Thomas and Acar, Erman and Nolle, Andreas and Eckert, Kai},
+ title = {The Role of Reasoning for RDF Validation},
+ booktitle = {Proceedings of the 11th International Conference on Semantic Systems},
+ series = {SEMANTICS '15},
+ year = {2015},
+ isbn = {978-1-4503-3462-4},
+ location = {Vienna, Austria},
+ pages = {33--40},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2814864.2814867},
+ doi = {10.1145/2814864.2814867},
+ acmid = {2814867},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {OWL, RDF constraint types, RDF validation, data quality, linked data, reasoning, semantic web},
+} 
+
+@inproceedings{arndt_owled_2015,
+  author = {Arndt, D\"orthe and De Meester, Ben and Bonte, Pieter and Schaballie, Jeroen and Bhatti, Jabran and Dereuddre, Wim and Verborgh, Ruben and Ongenae, Femke and De Turck, Filip and Van de Walle, Rik and Mannens, Erik},
+  title = {Improving {OWL RL} reasoning in {N3} by using specialized rules},
+  booktitle = {Ontology Engineering: 12th International Experiences and Directions Workshop on OWL},
+  editor = {Tamma, Valentina and Dragoni, Mauro and Gon\c{c}alves, Rafael and {\L}awrynowicz, Agnieszka},
+  publisher = {Springer},
+  series = {Lecture Notes in Computer Science},
+  volume = 9557,
+  pages = {93--104},
+  year = 2016,
+  month = apr,
+  isbn = {978-3-319-33245-1},
+  doi = {10.1007/978-3-319-33245-1_10},
+  url = {http://dx.doi.org/10.1007/978-3-319-33245-1_10},
+}
+
+@inproceedings{arndt_ruleml_industry_2015,
+  author = {Arndt, D\"orthe and De Meester, Ben and Bonte, Pieter and Schaballie, Jeroen and Bhatti, Jabran and Dereuddre, Wim and Verborgh, Ruben and Ongenae, Femke and De Turck, Filip and Van de Walle, Rik and Mannens, Erik},
+  title = {Ontology Reasoning using Rules in an {eHealth} Context},
+  booktitle = {Proceedings of the 9th International RuleML Symposium},
+  series = {Lecture Notes in Computer Science},
+  editor = {Bassiliades, Nick and Gottlob, Georg and Sadri, Fariba and Paschke, Adrian and Roman, Dumitru},
+  volume = 9202,
+  pages = {465--472},
+  publisher = {Springer},
+  year = 2015,
+  month = jul,
+  url = {http://link.springer.com/chapter/10.1007/978-3-319-21542-6_31},
+}
+
+@Inbook{polleres2006rules,
+author="Polleres, Axel
+and Feier, Cristina
+and Harth, Andreas",
+editor="Sure, York
+and Domingue, John",
+title="Rules with Contextually Scoped Negation",
+bookTitle="The Semantic Web: Research and Applications: 3rd European Semantic Web Conference, ESWC 2006 Budva, Montenegro, June 11-14, 2006 Proceedings",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="332--347",
+isbn="978-3-540-34545-9",
+doi="10.1007/11762256_26",
+url="http://dx.doi.org/10.1007/11762256_26"
+}
+
+
+
+@Inbook{damasio2006supporting,
+author="Dam{\'a}sio, Carlos Viegas
+and Analyti, Anastasia
+and Antoniou, Grigoris
+and Wagner, Gerd",
+editor="Alferes, J{\'o}se J{\'u}lio
+and Bailey, James
+and May, Wolfgang
+and Schwertel, Uta",
+title="Supporting Open and Closed World Reasoning on the Web",
+bookTitle="Principles and Practice of Semantic Web Reasoning: 4th International Workshop, PPSWR 2006, Budva, Montenegro, June 10-11, 2006, Revised Selected Papers",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="149--163",
+isbn="978-3-540-39587-4",
+doi="10.1007/11853107_11",
+url="http://dx.doi.org/10.1007/11853107_11"
+}
+
+@Inbook{Kifer2005,
+author="Kifer, Michael
+and de Bruijn, Jos
+and Boley, Harold
+and Fensel, Dieter",
+editor="Adi, Asaf
+and Stoutenburg, Suzette
+and Tabet, Said",
+title="A Realistic Architecture for the Semantic Web",
+bookTitle="Rules and Rule Markup Languages for the Semantic Web: First International Conference, RuleML 2005, Galway, Ireland, November 10-12, 2005. Proceedings",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="17--29",
+isbn="978-3-540-32270-2",
+doi="10.1007/11580072_3",
+url="http://dx.doi.org/10.1007/11580072_3"
+}
+@Inbook{negflora,
+author="Kifer, Michael",
+editor="Baral, Chitta
+and Greco, Gianluigi
+and Leone, Nicola
+and Terracina, Giorgio",
+title="Nonmonotonic Reasoning in FLORA-2",
+bookTitle="Logic Programming and Nonmonotonic Reasoning: 8th International Conference, LPNMR 2005, Diamante, Italy, September 5-8, 2005. Proceedings",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1--12",
+isbn="978-3-540-31827-9",
+doi="10.1007/11546207_1",
+url="http://dx.doi.org/10.1007/11546207_1"
+}
+
+
+
+@article{flogic,
+ author = {Kifer, Michael and Lausen, Georg and Wu, James},
+ title = {Logical Foundations of Object-oriented and Frame-based Languages},
+ journal = {J. ACM},
+ issue_date = {July 1995},
+ volume = {42},
+ number = {4},
+ month = jul,
+ year = {1995},
+ issn = {0004-5411},
+ pages = {741--843},
+ numpages = {103},
+ url = {http://doi.acm.org/10.1145/210332.210335},
+ doi = {10.1145/210332.210335},
+ acmid = {210335},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {deductive databases, frame-based languages, logic programming, nonmonotonic inheritance, object-oriented programming, proof theory, semantics, typing},
+} 
+@online{rifpredicates,
+  title={RIF datatypes and built-ins 1.0 (Second Edition)},
+  author={Polleres, Axel and Boley, Harold and Kifer, Michael},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  note = {\url{https://www.w3.org/TR/rif-dtb/}},
+  day = 5,
+  month = feb,
+  year = 2013
+}
