added papers for chapter 6

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@ citecolor = black]{hyperref} % make links
 
 \usepackage[square,numbers,sort&compress]{natbib}
 \usepackage{nicefrac}
-%\usepackage{subfig} % outdated
+%\usepackage{subfig} % does not work with hyperref
 
 %\usepackage{algorithm} % nice environment for pseudocode
 %\usepackage{algpseudocode} % pseudocode
@@ -709,7 +709,8 @@ citecolor = black]{hyperref} % make links
 \chapter{Querying and ontology reasoning with Notation3 Logic}\label{others}
 \section{General Discussion}\label{gen}
 \section{Use case: Nurse Call System}\label{orca}
-%\input{chapters/N3_and_others/orca1}
+\input{chapters/N3_and_others/orca1}
+\input{chapters/N3_and_others/orca2}
 \input{chapters/N3_and_others/validation}
 %\section{Use case: Data Validation}
 \label{validation}
