--- a/refs.bib
+++ b/refs.bib
@@ -483,7 +483,7 @@ Profiles} (Second Edition)},
   year = {2000--2009}
 }
 
-@online{EYE,
+@online{eye,
   author = {De Roo, Jos},
   title = {Euler Yet another proof Engine},
   note = {\url{http://eulersharp.sourceforge.net/}},
@@ -2441,4 +2441,61 @@ url="http://dx.doi.org/10.1007/11546207_1"
   day = 5,
   month = feb,
   year = 2013
+}
+@book{lisp,
+ author = {Steele,Jr., Guy L.},
+ title = {Common LISP: The Language (2Nd Ed.)},
+ year = {1990},
+ isbn = {1-55558-041-6},
+ publisher = {Digital Press},
+ address = {Newton, MA, USA},
+} 
+@article{accioont,
+  title={PARTICIPATORY DESIGN OF A CONTINUOUS CARE ONTOLOGY},
+  author={Ongenae, Femke and Bleumers, Lizzy and Sulmon, Nicky and Verstraete, Mathijs and Van Gils, Mieke and Jacobs, An and De Zutter, Saar and Verhoeve, Piet and Ackaert, Ann and De Turck, Filip},
+  year={2011}
+}
+@online{EYEowl,
+  author = {De Roo, Jos},
+  title = {{EYE and OWL 2}},
+  note = {\url{http://eulersharp.sourceforge.net/2003/03swap/eye-owl2.html}},
+  year = {1999--2019}
+}
+@article{owlim,
+  title={OWLIM: A family of scalable semantic repositories.},
+  author={Bishop, Barry and Kiryakov, Atanas and Ognyanoff, Damyan and Peikov, Ivan and Tashev, Zdravko and Velkov, Ruslan},
+  journal={Semantic Web},
+  volume={2},
+  number={1},
+  pages={33--42},
+  year={2011}
+}
+@inproceedings{elowlim,
+  title={Implementing OWL 2 RL and OWL 2 QL Rule-Sets for OWLIM.},
+  author={Bishop, Barry and Bojanov, Spas},
+  booktitle={OWLED},
+  volume={796},
+  year={2011}
+}
+@book{snomed2,
+  title={Matching patient records to clinical trials using ontologies},
+  author={Patel, Chintan and Cimino, James and Dolby, Julian and Fokoue, Achille and Kalyanpur, Aditya and Kershenbaum, Aaron and Ma, Li and Schonberg, Edith and Srinivas, Kavitha},
+  year={2007},
+  publisher={Springer}
+}
+
+@inproceedings{finance,
+  title={Translating XBRL Into Description Logic. {An} Approach Using {Protege}, {Sesame} \& {OWL}},
+  author={Declerck, Thierry and Krieger, Hans-Ulrich},
+  booktitle={BIS},
+  pages={455--467},
+  year={2006}
+}
+@inproceedings{oracle,
+  title={Implementing an inference engine for {RDFS/OWL} constructs and user-defined rules in {Oracle}},
+  author={Wu, Zhe and Eadon, George and Das, Souripriya and Chong, Eugene Inseok and Kolovski, Vladimir and Annamalai, Melliyal and Srinivasan, Jagannathan},
+  booktitle={Data Engineering, 2008. ICDE 2008. IEEE 24th International Conference on},
+  pages={1239--1248},
+  year={2008},
+  organization={IEEE}
 }
