added sensdesc (raw version}

--- a/main.tex
+++ b/main.tex
@@ -707,6 +707,7 @@ citecolor = black]{hyperref} % make links
 
 
 \chapter{Querying and ontology reasoning with Notation3 Logic}\label{others}
+\input{chapters/N3_and_others/intro}
 \section{General Discussion}\label{gen}
 \section{Use case: Nurse Call System}\label{orca}
 \input{chapters/N3_and_others/orca1}
