--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@ plainpages = false,
 hypertexnames = false,
 citecolor = black]{hyperref} % make links
 
-
+\usepackage{makecell}
 \usepackage{url}						% urls (duh)
 \usepackage{doi}						% doi links
 \usepackage{a4wide}						% iets meer tekst op 1 pagina
@@ -278,6 +278,7 @@ citecolor = black]{hyperref} % make links
 \usepackage{tikz}
 \usetikzlibrary{arrows,positioning,shapes.misc,calc}
 \definecolor{lightgrey}{RGB}{170, 170, 170}
+\definecolor{lightergrey}{RGB}{220,220,220}
 \pgfdeclarelayer{background}
 \pgfdeclarelayer{foreground}
 \pgfsetlayers{background,main,foreground}
