conclusion for N3 and others

--- a/main.tex
+++ b/main.tex
@@ -759,10 +759,10 @@ This chapter was partly based on the publications:
 \label{validation}
 
 
-\section{Conclusion}
+\input{chapters/N3_and_others/conclusion}
 
 
-scoped negation as failure
+
 
 \newpage
 This chapter was partly based on the publications:
