--- a/main.tex
+++ b/main.tex
@@ -766,7 +766,7 @@ This chapter was partly based on the publications:
 
 \newpage
 This chapter was partly based on the publications:
-\vspace{0.5cm}
+\vspace{0.3cm}
 
 \bibentry{arndt_ruleml_industry_2015}
 
@@ -783,7 +783,7 @@ This chapter was partly based on the publications:
 \bibentry{ben}
 
 \chapter{Proofs and applications}\label{proof}
-\section{A Proof Calculus for N3}\label{cal}
+%\section{A Proof Calculus for N3}
 \input{chapters/Proofs/proofs}
 OWL: expressing proofs is difficult (I guess possible but as far as I know not done). N3 is good because it is rather  easy to express proofs.
 
@@ -791,21 +791,39 @@ Say that rule-producing rules are not covered by the calculs. Rules as data vs r
 
 In OWL, you normally express explanations, these are small sets of axioms from which new knowledge follows.
 
-\input{chapters/Proofs/pragmatic-proof}
+
 
 
 %\input{chapters/Proofs/proofcalculus}
 %\section{Applications of Proofs}
 %\input{chapters/Proofs/PP}
 %\subsection{Sensdesc}
+%\chapter{Applications of proofs}
 \section{Proofs in Use: RESTdesc}\label{restdesc}
+\input{chapters/Proofs/pragmatic-proof}
 \section{Proofs in Use: SENSdesc}\label{sensdesc}
 \input{chapters/Proofs/sensdesc}
 
+\newpage
+This chapter was partly based on the publications:
+\vspace{0.3cm}
 
-\chapter{Going beyond: modeling change}
-\section{Weighted Transition Logic}
-not sure whether or not I have time to write this section. If not I should write a journal after the PhD.
+\bibentry{PP}
+
+\vspace{0.3cm}
+
+\bibentry{arndt_ruleml_2015}
+
+\vspace{0.3cm}
+
+\bibentry{sensdesc}
+
+
+
+
+% \chapter{Going beyond: modeling change}
+% \section{Weighted Transition Logic}
+% not sure whether or not I have time to write this section. If not I should write a journal after the PhD.
 
 
 \chapter{Conclusion}\label{concl}\label{conclusion}
