--- a/refs.bib
+++ b/refs.bib
@@ -347,27 +347,6 @@ author = "Herbert B. Enderton"
 
 
 
-
-
-
-
-
-
-
-
-
-
-@online{Proof,
-  author = {Brickley, Dan and Guha, R.\ V.},
-  title = {{{\sc rdf} Vocabulary Description Language 1.0: {\sc rdf} Schema}},
-  note =  {\url{http://www.w3.org/2000/10/swap/reason#}},
-  howpublished = {{\sc w\oldstylenums3c} Recommendation},
-  day = 10,
-  month = feb,
-  year = 2004
-}
-
-
 @online{SPARQLold,
   author = {Prud'hommeaux, Eric and Seaborne, Andy},
   title = {{{\sc sparql} Query Language for {\sc rdf}}},
@@ -1468,6 +1447,16 @@ url="https://doi.org/10.1007/978-3-540-76298-0_7"
   journal={Geneva: ISO Copyright Office},
   year={2007}
 }
+@online{Proof,
+  author = {Brickley, Dan and Guha, R.\ V.},
+  title = {{{\sc rdf} Vocabulary Description Language 1.0: {\sc rdf} Schema}},
+  note =  {\url{http://www.w3.org/2000/10/swap/reason\#}},
+  howpublished = {{\sc w\oldstylenums3c} Recommendation},
+  day = 10,
+  month = feb,
+  year = 2004
+}
+
 @standard{ICL,
   added-at = {2012-01-10T09:08:12.000+0100},
   biburl = {http://www.bibsonomy.org/bibtex/2cd566451a1825be967a11972b24d2786/voj},
@@ -1476,10 +1465,11 @@ url="https://doi.org/10.1007/978-3-540-76298-0_7"
   intrahash = {cd566451a1825be967a11972b24d2786},
   keywords = {iso logic},
   timestamp = {2013-01-06T09:56:23.000+0100},
-  note =  {\url{standards.iso.org/ittf/PubliclyAvailableStandards/c039175_ISO_IEC_24707_2007%28E%29.zip}},
+  note =  {\url{standards.iso.org/ittf/PubliclyAvailableStandards/c039175_ISO_IEC_24707_2007\%28E\%29.zip}},
   title = {{ISO/IEC 24707:2007 Information technology -- Common Logic (CL)}},
   year = 2007
 }
+
 
 %layer cake
 
@@ -2450,10 +2440,24 @@ url="http://dx.doi.org/10.1007/11546207_1"
  publisher = {Digital Press},
  address = {Newton, MA, USA},
 } 
-@article{accioont,
+@article{accioontold,
   title={PARTICIPATORY DESIGN OF A CONTINUOUS CARE ONTOLOGY},
   author={Ongenae, Femke and Bleumers, Lizzy and Sulmon, Nicky and Verstraete, Mathijs and Van Gils, Mieke and Jacobs, An and De Zutter, Saar and Verhoeve, Piet and Ackaert, Ann and De Turck, Filip},
   year={2011}
+}
+@article{accioont,
+  abstract     = {Ontology engineering methodologies tend to emphasize the role of the knowledge engineer or require a very active role of domain experts. In this paper, a participatory ontology engineering method is described that holds the middle ground between these two 'extremes'. After thorough ethnographic research, an interdisciplinary group of domain experts closely interacted with ontology engineers and social scientists in a series of workshops. Once a preliminary ontology was developed, a dynamic care request system was built using the ontology. Additional workshops were organized involving a broader group of domain experts to ensure the applicability of the ontology across continuous care settings. The proposed method successfully actively engaged domain experts in constructing the ontology, without overburdening them. Its applicability is illustrated by presenting the co-created continuous care ontology. The lessons learned during the design and execution of the approach are also presented.},
+  author       = {Ongenae, Femke and Duysburgh, Pieter and Sulmon, Nicky and Verstraete, Mathijs and Bleumers, Lizzy and De Zutter, Saar and Verstichel, Stijn and Ackaert, Ann and Jacobs, An and De Turck, Filip},
+  issn         = {1570-5838},
+  journal      = {Applied Ontology},
+  keyword      = {Ontology engineering,HEALTH-CARE,co-design,continuous care,eHealth,participatory,IBCN},
+  language     = {eng},
+  number       = {1},
+  pages        = {27--64},
+  title        = {An ontology co-design method for the co-creation of a continuous care ontology},
+  url          = {http://dx.doi.org/10.3233/AO-140131},
+  volume       = {9},
+  year         = {2014},
 }
 @online{EYEowl,
   author = {De Roo, Jos},
@@ -2498,4 +2502,70 @@ url="http://dx.doi.org/10.1007/11546207_1"
   pages={1239--1248},
   year={2008},
   organization={IEEE}
+}
+@inproceedings{owlex,
+  TITLE = {{Datalog+, RuleML and OWL 2: Formats and Translations for Existential Rules}},
+  AUTHOR = {Baget, Jean-Fran{\c c}ois and Gutierrez, Alain and Lecl{\`e}re, Michel and Mugnier, Marie-Laure and Rocher, Swan and Sipieter, Cl{\'e}ment},
+  URL = {https://hal.archives-ouvertes.fr/hal-01172069},
+  BOOKTITLE = {{RuleML: Web Rule Symposium}},
+  ADDRESS = {Berlin, Germany},
+  YEAR = {2015},
+  MONTH = Aug,
+  KEYWORDS = {Graal ; Datalog+ ; OWL2 ; RuleML},
+  HAL_ID = {hal-01172069},
+  HAL_VERSION = {v1},
+}
+
+@article{arndt_jws_2019,
+  title = {Implicit quantification made explicit: {How} to interpret blank nodes and universal variables in {Notation3 Logic}},
+  author = {Arndt, D\"orthe and Schrijvers, Tom and De Roo, Jos and Verborgh, Ruben},
+  journal = {Journal of Web Semantics},
+  year = 2019,
+}
+@inproceedings{arndt_rulemlrr_2017,
+  author = {Arndt, D\"orthe and De Meester, Ben and Dimou, Anastasia and Verborgh, Ruben and Mannens, Erik},
+  title = {Using Rule-Based Reasoning for {RDF} Validation},
+  booktitle = {Proceedings of the International Joint Conference on Rules and Reasoning},
+  editor = {Costantini, Stefania and Franconi, Enrico and Van Woensel, William and Kontchakov, Roman and Sadri, Fariba and Roman, Dumitru},
+  year = 2017,
+  month = jul,
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  volume = 10364,
+  pages = {22--36},
+  isbn = {978-3-319-61252-2},
+  doi = {10.1007/978-3-319-61252-2_3},
+}
+@article{ben,
+  title = {{RDF} Graph Validation Using Rule-Based Reasoning},
+  author = {De Meester, Ben  and Heyvaert, Pieter and Arndt, D\"orthe and Dimou, Anastasia and Verborgh, Ruben},
+  journal = {submitted to: Semantic Web Journal},
+  year = 2019
+}
+@InProceedings{beek2014lod,
+  author       = {Beek, Wouter and Rietveld, Laurens and Bazoobandi, Hamid R and Wielemaker, Jan and Schlobach, Stefan},
+  title        = {{LOD L}aundromat: {A} {U}niform {W}ay of {P}ublishing {O}ther {P}eople's {D}irty {D}ata},
+  booktitle    = {Proceedings of the 13\textsuperscript{th} International Semantic Web Conference},
+  year         = {2014},
+  pages        = {213--228},
+  organization = {Springer},
+  publisher    = {Springer International Publishing},
+  _doi          = {10.1007/978-3-319-11964-9_14},
+  _file         = {:beek2014lod.pdf:PDF},
+  groups       = {ReasoningValidation},
+  owner        = {bjdmeest},
+  timestamp    = {2018.04.25},
+}
+@inproceedings{sensdesc,
+  author = {Arndt, D\"orthe and Bonte, Pieter and Dejonghe, Alexander and Verborgh, Ruben and De Turck, Filip and Ongenae, Femke},
+  title = {{SENSdesc:} Connect Sensor queries and Context},
+  booktitle = {Proceedings of the 11th International Joint Conference on Biomedical Engineering Systems and Technologies},
+  editor = {Zwiggelaar, Reyer and Gamboa, Hugo and Fred, Ana Berm\'udez i Badia, Sergi},
+  year = 2018,
+  month = jan,
+  pages = {671--679},
+  publisher = {SCITEPRESS},
+  isbn = {978-989-758-281-3},
+  doi = {10.5220/0006733106710679},
+  url = {http://www.scitepress.org/DigitalLibrary/Link.aspx?doi=10.5220/0006733106710679},
 }
