make two chapters out of pragmatic proof

--- a/main.tex
+++ b/main.tex
@@ -782,7 +782,7 @@ This chapter was partly based on the publications:
 
 \bibentry{ben}
 
-\chapter{Proofs and applications}\label{proof}
+\chapter{Proofs in N3}\label{proof}
 %\section{A Proof Calculus for N3}
 \input{chapters/Proofs/proofs}
 OWL: expressing proofs is difficult (I guess possible but as far as I know not done). N3 is good because it is rather  easy to express proofs.
@@ -791,18 +791,6 @@ Say that rule-producing rules are not covered by the calculs. Rules as data vs r
 
 In OWL, you normally express explanations, these are small sets of axioms from which new knowledge follows.
 
-
-
-
-%\input{chapters/Proofs/proofcalculus}
-%\section{Applications of Proofs}
-%\input{chapters/Proofs/PP}
-%\subsection{Sensdesc}
-%\chapter{Applications of proofs}
-\section{Proofs in Use: RESTdesc}\label{restdesc}
-\input{chapters/Proofs/pragmatic-proof}
-\section{Proofs in Use: SENSdesc}\label{sensdesc}
-\input{chapters/Proofs/sensdesc}
 
 \newpage
 This chapter was partly based on the publications:
@@ -813,6 +801,25 @@ This chapter was partly based on the publications:
 \vspace{0.3cm}
 
 \bibentry{arndt_ruleml_2015}
+
+\chapter{Applications of proofs}\label{restdesc}
+%\input{chapters/Proofs/proofcalculus}
+%\section{Applications of Proofs}
+%\input{chapters/Proofs/PP}
+%\subsection{Sensdesc}
+%\chapter{Applications of proofs}
+%\section{Proofs in Use: RESTdesc}
+\input{chapters/Proofs/pragmatic-proof}
+\section{Extending the RESTdesc idea: SENSdesc}\label{sensdesc}
+\input{chapters/Proofs/sensdesc}
+\section{Limits of the apporach}
+\input{chapters/Proofs/conclusion}
+
+\newpage
+This chapter was partly based on the publications:
+\vspace{0.3cm}
+
+\bibentry{PP}
 
 \vspace{0.3cm}
 
@@ -826,7 +833,9 @@ This chapter was partly based on the publications:
 % not sure whether or not I have time to write this section. If not I should write a journal after the PhD.
 
 
-\chapter{Conclusion}\label{concl}\label{conclusion}
+\chapter{Conclusions}\label{concl}\label{conclusion}
+\section{Review of the research questions}
+\section{Open challenges and future directions}
 
 
 %\afterpage{\null\blankpage}
